[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/sign.png" type="Texture" id=1]
[ext_resource path="res://objects/mapelement/Sign.gd" type="Script" id=2]
[ext_resource path="res://sprites/sign_zoom.png" type="Texture" id=3]

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SignZoomSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, -60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SignZoomSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SignZoomSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "reveal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SignZoomSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -60 ), Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SignZoomSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SignZoomSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[node name="Sign" type="Area2D"]
script = ExtResource( 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 3 )
anims/reveal = SubResource( 2 )

[node name="SignSprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SignZoomSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -64 )
scale = Vector2( 2, 2 )
z_index = 50
z_as_relative = false
texture = ExtResource( 3 )

[node name="SignHintSPrite" type="Sprite" parent="SignZoomSprite"]
scale = Vector2( 0.5, 0.5 )

[connection signal="body_entered" from="." to="." method="_on_Sign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sign_body_exited"]
